plugins {
    id 'java'
    id 'application'
    id 'io.freefair.lombok' version '9.2.0'
}

group = 'org.artem'
version = '1.0-BETA'

java {
    sourceCompatibility = JavaVersion.VERSION_25
    targetCompatibility = JavaVersion.VERSION_25
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.21.0'
    implementation 'org.apache.poi:poi-ooxml:5.5.1'
    implementation 'org.slf4j:slf4j-api:2.0.9'
    runtimeOnly 'org.apache.logging.log4j:log4j-core:2.24.3'
    runtimeOnly 'org.apache.logging.log4j:log4j-slf4j2-impl:2.24.3'

    testImplementation platform('org.junit:junit-bom:5.14.2')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testImplementation 'org.assertj:assertj-core:3.27.7'
    testImplementation 'org.mockito:mockito-core:5.14.2'
    testImplementation 'org.mockito:mockito-junit-jupiter:5.14.2'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

application {
    mainClass = 'com.tax.calculator.TaxReportRunner'
}

run {
    systemProperty 'broker.report', System.getProperty('broker.report')
    systemProperty 'rates.file', System.getProperty('rates.file')
}

test {
    useJUnitPlatform()
    jvmArgs '-XX:+EnableDynamicAgentLoading'
}